# Mars

./: Cargo.toml  README.md
decision_tree/: Cargo.toml
dimensionality_reduction/: Cargo.toml
examples/: .gradient_descent.rs.rustfmt  Cargo.toml  base.rs  binary_cross_entropy.rs  gradient_descent.rs  linear_regression.rs  mean_absolute_error.rs  mean_squared_error.rs  root_mean_squared_error.rs
examples/inspiration/: mean_absolute_error.py
gradient_boosting/: Cargo.toml
gradient_boosting/src/: gradient_boosting.rs
gradient_descent/: Cargo.toml
gradient_descent/src/: gradient_descent.rs
k_means/: Cargo.toml
knn/: Cargo.toml
linear_regression/: Cargo.toml
logistic_regression/: Cargo.toml
loss_functions/: Cargo.toml
loss_functions/src/: base.rs  binary_cross_entropy.rs  mean_absolute_error.rs  mean_squared_error.rs  root_mean_squared_error.rs
mars_playground/: Cargo.toml
mars_playground/src/: gradient_descent.rs  main.rs
naive_bayes/: Cargo.toml
phobos/: Cargo.toml
random_forest/: Cargo.toml
