[workspace]

members = [
    "gradient_descent",
    "linear_regression",
    "logistic_regression",
    "random_forest",
    "decision_tree",
    "svm",
    "naive_bayes",
    "knn",
    "k_means",
    "dimensionality_reduction",
    "gradient_boosting",
    "loss_functions",
    "phobos", # is a model-saver like pickle in python. Name comes from one of mars's moons.
    "mars_playground",
    "examples",
]
