[package]
name = "mars-examples"
version = "0.1.0"

[dependencies]
gnuplot = "*"
csv = "*"

[[bin]]
name = "gradient_descent"
path = "gradient_descent.rs"

[[bin]]
name = "mean_absolute_error"
path = "mean_absolute_error.rs"

[[bin]]
name = "binary_cross_entropy"
path = "binary_cross_entropy.rs"

[[bin]]
name = "mean_squared_error"
path = "mean_squared_error.rs"

# [[bin]]
# name = "binary_cross_entropy"
# path = "binary_cross_entropy.rs"

# [[bin]]
# name = "binary_cross_entropy"
# path = "binary_cross_entropy.rs"

# [[bin]]
# name = "binary_cross_entropy"
# path = "binary_cross_entropy.rs"

# [[bin]]
# name = "binary_cross_entropy"
# path = "binary_cross_entropy.rs"

# [[bin]]
# name = "binary_cross_entropy"
# path = "binary_cross_entropy.rs"
