[package]
name = "mars-examples"
version = "0.1.0"

[dependencies]
gnuplot = "*"
csv = "*"

[[example]]
name = "gradient_descent"
path = "gradient_descent.rs"

[[example]]
name = "mean_absolute_error"
path = "mean_absolute_error.rs"

[[example]]
name = "binary_cross_entropy"
path = "binary_cross_entropy.rs"

[[example]]
name = "mean_squared_error"
path = "mean_squared_error.rs"

[[example]]
name = "linear_regression"
path = "linear_regression.rs"

[[example]]
name = "root_mean_squared_error"
path = "root_mean_squared_error.rs"

# [[example]]
# name = "exampleary_cross_entropy"
# path = "exampleary_cross_entropy.rs"

# [[example]]
# name = "exampleary_cross_entropy"
# path = "exampleary_cross_entropy.rs"

# [[example]]
# name = "exampleary_cross_entropy"
# path = "exampleary_cross_entropy.rs"
